--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-highlight-pop": "^1.0.2",
+    "react-p5-wrapper": "^3.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
